update subscription functionality